// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-button-slot-beta #render should render button with invalid accent 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Invalid" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render default button 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Default" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render default input[type=button] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Default" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render default input[type=submit] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Default" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled default button 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button disabled="" title="Default" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled default input[type=button] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Default" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled default input[type=submit] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Default" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled primary button 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button disabled="" title="Primary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled primary input[type=button] 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Primary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled primary input[type=submit] 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Primary" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled secondary button 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button disabled="" title="Secondary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled secondary input[type=button] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Secondary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled secondary input[type=submit] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Secondary" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled tertiary button 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button disabled="" title="Tertiary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled tertiary input[type=button] 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Tertiary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled tertiary input[type=submit] 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input disabled="" title="Tertiary" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render input[type=button] with invalid accent 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Invalid" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render input[type=submit] with invalid accent 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Invalid" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render invalid button 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Invalid" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render invalid input[type=button] 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Invalid" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render invalid input[type=submit] 1`] = `
<gux-button-slot-beta accent="invalid">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Invalid" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render primary button 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Primary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render primary input[type=button] 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Primary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render primary input[type=submit] 1`] = `
<gux-button-slot-beta accent="primary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Primary" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render secondary button 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Secondary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render secondary input[type=button] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Secondary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render secondary input[type=submit] 1`] = `
<gux-button-slot-beta accent="secondary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Secondary" type="submit" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render tertiary button 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button title="Tertiary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render tertiary input[type=button] 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Tertiary" type="button" value="Button">
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render tertiary input[type=submit] 1`] = `
<gux-button-slot-beta accent="tertiary">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <input title="Tertiary" type="submit" value="Button">
</gux-button-slot-beta>
`;
